--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello I'm</p>
-            <h1 class="title">Suvijug Tangchutaveesub</h1>
+            <h1 class="title-text">Suvijug Tangchutaveesub</h1>
             <p class="section__text__p2 typing">Computer Science</p>
             <div class="btn-container">
                 <button class="btn btn-color-1" onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">Contact</button>
